# cognitive-memory-daemon

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md  cognitive-memory.skill  deny.toml  release-please-config.json
.claude/skills/cognitive-memory/: SKILL.md
.claude/skills/cognitive-memory/references/: commands.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_e2e.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: doctor.rs  handlers.rs  lib.rs  main.rs  server.rs  trace.rs
crates/daemon/tests/: e2e.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: canonical.rs  fake.rs  lib.rs  local.rs
crates/embeddings/tests/: embeddings.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/graph/tests/: graph.rs
crates/http-bridge/: Cargo.toml
crates/http-bridge/src/: lib.rs  main.rs
crates/http-bridge/tests/: bridge.rs
crates/lifecycle/: Cargo.toml
crates/lifecycle/benches/: parity_bench.rs
crates/lifecycle/src/: lib.rs
crates/lifecycle/tests/: parity.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  fake.rs  lib.rs  local.rs  openai.rs  rate_limit.rs
crates/llm/tests/: llm.rs  providers.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  lib.rs
crates/protocol/tests/: fixtures.rs  round_trip.rs
crates/protocol/tests/fixtures/events/: tick_completed.json
crates/protocol/tests/fixtures/requests/: diagnostics_mint_bridge_token.json  diagnostics_status.json  memory_search.json  memory_store.json
crates/protocol/tests/fixtures/responses/: bridge_token.json  err_protocol_mismatch.json  memory_search_results.json  memory_stored.json  ok_status.json
crates/search/: Cargo.toml
crates/search/src/: cosine.rs  hybrid.rs  lib.rs  searcher.rs
crates/search/tests/: search.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  pool.rs  repos.rs
crates/store/tests/: storage.rs
docs/: README.md
docs/concepts/: embedding-strategy.md  http-bridge.md  memory-model.md
docs/decisions/: 0001-rust-as-daemon-language.md  0002-request-response-event-protocol.md  0003-bge-small-default-embedding.md  0004-socket-and-paths-macos.md  0005-http-bridge-localhost-bearer.md  0006-shared-userid-project-metadata.md  0007-llm-key-precedence.md  0008-clean-slate-no-migration.md  0009-vendor-mxr-lazydap-not-shared-crate.md
docs/developer/: adding-a-request.md  code-reuse.md  test-discipline.md  testing-strategy.md
docs/operations/: configuration.md  installation.md  observability.md  troubleshooting.md
packaging/homebrew/: cognitive-memory.rb
