[package]
name = "cognitive-memory-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory associations and n-hop expansion for cognitive-memory-daemon."

[lints]
workspace = true

[dependencies]
cognitive-memory-core = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
