[package]
name = "cognitive-memory-http-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP bridge for cognitive-memory-daemon. Loopback only, bearer token auth (ADR 0005)."

[lints]
workspace = true

[lib]
name = "cognitive_memory_http_bridge"
path = "src/lib.rs"

[[bin]]
name = "cm-http"
path = "src/main.rs"

[dependencies]
cognitive-memory-core = { workspace = true }
cognitive-memory-protocol = { workspace = true }
cognitive-memory-client = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
cognitive-memory-daemon = { workspace = true }
cognitive-memory-store = { workspace = true }
cognitive-memory-embeddings = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
pretty_assertions = { workspace = true }
