[package]
name = "cognitive-memory-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IPC protocol types and codec for cognitive-memory-daemon. The public wire contract."

[lints]
workspace = true

[dependencies]
cognitive-memory-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
