[package]
name = "cognitive-memory-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite storage layer for cognitive-memory-daemon. Two-pool: 1 writer + N readers."

[lints]
workspace = true

[dependencies]
cognitive-memory-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
